# sos2026-rjorge-stellarator-optimization

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  ROADMAP.md  STATUS.md  environment.yml  pixi.toml  pyproject.toml  requirements-colab.txt  requirements-core.txt  requirements-full.txt
data/: README.md
docs/: code_stack.md  conf.py  data_sources.md  index.md  install.md  instructor_checklist.md  live_demo_matrix.md  references.md  teaching_notes.md  troubleshooting.md
exercises/: exercise_1_boundary_modes.md  exercise_2_boozer_spectrum.md  exercise_3_coil_tradeoff.md  exercise_4_transport_metric.md  exercise_5_pareto_front.md
notebooks/: 00_environment_check.ipynb  01_vmec_jax_first_equilibrium.ipynb  02_boozer_spectrum.ipynb  03_effective_ripple_neo_jax.ipynb  04_simsopt_stage2_coils.ipynb  05_single_stage_toy.ipynb  06_essos_fieldlines_particles.ipynb  07_sfincs_jax_neoclassical_cached.ipynb  08_spectrax_gk_linear_metric.ipynb  09_turbulence_metric_surrogate.ipynb  10_neopax_profile_closure.ipynb  11_pareto_design_dashboard.ipynb
scripts/: audit_3d_aspect.py  audit_figure_whitespace.py  audit_no_local_paths.py  audit_notebook_outputs.py  audit_powerpoint_previews.py  audit_readthedocs_links.py  audit_slides_style.py  build_powerpoint_decks.mjs  check_release_ready.py  execute_all_notebooks.py  execute_notebooks_core.py  execute_notebooks_in_place.py  fetch_equilibria.py  generate_all_figures.py  generate_movies.py  make_lecture_bundle.py  make_pptx_contact_sheet.py  make_status_report.py  run_smoke_tests.py
slides/: build_slides.sh  (+4 more)
(+34 files in other folders)
